--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "rule-to-graph-backend",
   "version": "0.0.0",
+  "engines": {
+   "node": "12.14.0"
+ }
   "private": true,
   "scripts": {
     "start": "set PORT=3001 && node ./bin/www"
